--- a/index.html
+++ b/index.html
@@ -18,18 +18,14 @@
     <meta property="og:description" content="Looking for the best and affordable digital marketing company in Kerala, Kochi? Bumble Bee offers SEO, social media campaigns, content marketing, and more to drive better traffic, leads, and conversions.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.bumblebeemedia.in">
-    <meta property="og:image" content="assets/img/og-image.gif">
+    <meta property="og:image" content="assets/img/og-image.jpeg">
 
     <!-- Twitter Card Data -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@bumblebee">
     <meta name="twitter:title" content="Best and Affordable Digital Marketing Company in Kerala - Bumble Bee">
     <meta name="twitter:description" content="Looking for the best and affordable digital marketing company in Kerala, Kochi? Bumble Bee offers SEO, social media campaigns, content marketing, and more to drive better traffic, leads, and conversions.">
-    <meta name="twitter:image" content="https://www.bumblebee.com/images/twitter-image.jpg">
-
-    <!-- Canonical Link -->
-    <link rel="canonical" href="https://www.bumblebeemedia.in">
-    <link href="assets/css/main.css" rel="stylesheet">
+    <meta name="twitter:image" content="assets/img/og-image.jpeg">
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZV2LBZD32Q"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -45,6 +41,8 @@
           y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
       })(window, document, "clarity", "script", "msomjlwixr");
   </script>
+    <!-- Canonical Link -->
+    <link rel="canonical" href="https://www.bumblebeemedia.in">
 
     <!-- Schema.org Structured Data -->
     <script type="application/ld+json">
@@ -83,6 +81,7 @@
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
+  <link href="assets/css/main.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: PhotoFolio
@@ -192,14 +191,15 @@
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
         <i class="bi bi-camera"></i>
-        <h1 class="sitename">PhotoFolio</h1>
+        <h1 class="sitename">Bumble bee</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="index.html" class="active">Home<br></a></li>
           <li><a href="about.html">About</a></li>
-          <li class="dropdown"><a href="gallery.html"><span>Gallery</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <li><a href="plan-details.html">plans & pricing</a></li>
+          <!-- <li class="dropdown"><a href="gallery.html"><span>Gallery</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="gallery.html">Nature</a></li>
               <li><a href="gallery.html">People</a></li>
@@ -217,9 +217,9 @@
                 </ul>
               </li>
             </ul>
-          </li>
+          </li> -->
           <li><a href="services.html">Services</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <!-- <li><a href="contact.html">Contact</a></li> -->
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -244,7 +244,7 @@
           <div class="col-lg-6 text-center" data-aos="fade-up" data-aos-delay="100">
             <h2><span class="underlight">Your </span>  Digital Success Starts Here. <span>From Strategy to Success: Your Digital Marketing Partner</span></h2>
             <p>Boost Your Online Presence with Our Comprehensive Digital Marketing Solutions</p>
-            <a href="contact.html" class="btn-get-started">Check Plans<br></a>
+            <a href="plan-details.html"><button  style="--clr:#FCBD23"><span>check plans</span><i></i></button></div></a>
           </div>
         </div>
       </div>
@@ -265,7 +265,7 @@
         <li class="six">SEO Mastery</li>
         <li class="six">Engaging Social Media</li>
         <li class="six">High-Performance PPC</li> 
-        <a href="#">Read More</a>
+        <a href="plan-details.html">Check plans</a>
       </div>
     </div>
     <div class="box">
@@ -275,7 +275,7 @@
         <li class="six">Cinematic Videos</li>
         <li class="six">Professional Photography</li>
         <li class="six">Custom Visual Content</li> 
-          <a href="#">Read More</a>
+          <a href="plan-details.html">Check plans</a>
       </div>
     </div>
     <div class="box">
@@ -285,7 +285,7 @@
         <li class="six">Personalized Plans:</li>
         <li class="six">Data-Driven Insights</li>
         <li class="six">Continuous Optimization</li> 
-        <a href="#">Read More</a>
+        <a href="plan-details.html">Check plans</a>
       </div>
     </div>
   </div>
@@ -532,7 +532,7 @@
         <!-- You can delete the links only if you've purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="#">Bumble Bee Media</a>
+        Designed by <a href="index.html">Bumble Bee Media</a>
       </div>
     </div>
 
