--- a/services.html
+++ b/services.html
@@ -4,9 +4,63 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Services - PhotoFolio Bootstrap Template</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <title>Digital Marketing Services - Bumble Bee, Kerala's Leading Marketing Company</title>
+  <meta name="description" content="Explore the range of digital marketing services offered by Bumble Bee. From SEO and social media campaigns to content marketing, we provide comprehensive solutions to enhance your online presence.">
+  <meta name="keywords" content="digital marketing services, SEO services Kerala, social media marketing Kerala, content marketing services, Bumble Bee services, online marketing solutions">
+  <meta name="author" content="Bumble Bee">
+  
+  <!-- Open Graph Meta Tags for Social Media -->
+  <meta property="og:title" content="Digital Marketing Services - Bumble Bee, Kerala's Best Marketing Company">
+  <meta property="og:description" content="Explore the range of digital marketing services offered by Bumble Bee. From SEO and social media campaigns to content marketing, we provide comprehensive solutions to enhance your online presence.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.bumblebeemedia.in/service">
+  <meta property="og:image" content="assets/img/og-image.jpeg">
+  
+  <!-- Twitter Card Data -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@bumblebee">
+  <meta name="twitter:title" content="Digital Marketing Services - Bumble Bee, Kerala's Best Marketing Company">
+  <meta name="twitter:description" content="Explore the range of digital marketing services offered by Bumble Bee. From SEO and social media campaigns to content marketing, we provide comprehensive solutions to enhance your online presence.">
+  <meta name="twitter:image" content="assets/img/og-image.jpeg">
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZV2LBZD32Q"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZV2LBZD32Q');
+</script>
+<script type="text/javascript">
+  (function(c,l,a,r,i,t,y){
+      c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+      t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+      y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+  })(window, document, "clarity", "script", "msomjlwixr");
+</script>
+<!-- Canonical Link -->
+<link rel="canonical" href="https://www.bumblebeemedia.in/about.html">
+
+<!-- Schema.org Structured Data -->
+<script type="application/ld+json">
+{
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Bumble Bee",
+    "url": "https://www.bumblebeemedia.in",
+    "logo": "https://www.bumblebee.com/images/logo.png",
+    "contactPoint": {
+        "@type": "ContactPoint",
+        "telephone": "+1-800-555-5555",
+        "contactType": "Customer Service"
+    },
+    "sameAs": [
+        "https://www.facebook.com/bumblebee",
+        "https://www.twitter.com/bumblebee",
+        "https://www.linkedin.com/company/bumblebee"
+    ]
+}
+</script>
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -52,7 +106,9 @@
         <ul>
           <li><a href="index.html">Home<br></a></li>
           <li><a href="about.html">About</a></li>
-          <li class="dropdown"><a href="gallery.html"><span>Gallery</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <li><a href="plan-details.html">plans & pricing</a></li>
+          <li><a href="services.html" class="active">Services</a></li>
+          <!-- {% comment %} <li class="dropdown"><a href="gallery.html"><span>Gallery</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="gallery.html">Nature</a></li>
               <li><a href="gallery.html">People</a></li>
@@ -70,9 +126,9 @@
                 </ul>
               </li>
             </ul>
-          </li>
+          </li> {% endcomment %}
           <li><a href="services.html" class="active">Services</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          {% comment %} <li><a href="contact.html">Contact</a></li> {% endcomment %} -->
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -105,7 +161,7 @@
 
 
 
-              <a href="contact.html" class="cta-btn">Available Here <br></a>
+              <!-- {% comment %} <a href="contact.html" class="cta-btn">Available Here <br></a> {% endcomment %} -->
             </div>
           </div>
         </div>
@@ -351,7 +407,7 @@
           <li class="six">SEO Mastery</li>
           <li class="six">Engaging Social Media</li>
           <li class="six">High-Performance PPC</li> 
-          <a href="#">Read More</a>
+          <a href="plan-details.html">Read More</a>
         </div>
       </div>
       <div class="box">
@@ -361,7 +417,7 @@
           <li class="six">Cinematic Videos</li>
           <li class="six">Professional Photography</li>
           <li class="six">Custom Visual Content</li> 
-            <a href="#">Read More</a>
+            <a href="plan-details.html">Read More</a>
         </div>
       </div>
       <div class="box">
@@ -371,7 +427,7 @@
           <li class="six">Personalized Plans:</li>
           <li class="six">Data-Driven Insights</li>
           <li class="six">Continuous Optimization</li> 
-          <a href="#">Read More</a>
+          <a href="plan-details.html">Read More</a>
         </div>
       </div>
     </div>
@@ -433,7 +489,7 @@
 
     <div class="container">
       <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">PhotoFolio</strong> <span>All Rights Reserved</span></p>
+        <p>© <span>Copyright</span> <strong class="px-1 sitename">Bumble Bee Media</strong> <span>All Rights Reserved</span></p>
       </div>
       <div class="social-links d-flex justify-content-center">
         <a href=""><i class="bi bi-twitter-x"></i></a>
@@ -446,7 +502,7 @@
         <!-- You can delete the links only if you've purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by <a href="index.html">Bumble bee</a>
       </div>
     </div>
 
@@ -466,6 +522,7 @@
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script>window.$zoho=window.$zoho || {};$zoho.salesiq=$zoho.salesiq||{ready:function(){}}</script><script id="zsiqscript" src="https://salesiq.zohopublic.in/widget?wc=siqe32c3bf26b6ea53b050da25c411b31bdc50c31d08fafad0876f0023bbf34f9a5" defer></script>
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
