--- a/index.html
+++ b/index.html
@@ -58,15 +58,16 @@
             "contactType": "Customer Service"
         },
         "sameAs": [
-            "https://www.facebook.com/bumblebee",
+            "https://www.facebook.com/people/Bumblebee-Media/61560902312844/",
             "https://www.twitter.com/bumblebee",
-            "https://www.linkedin.com/company/bumblebee"
+            "href="https://www.linkedin.com/company/bumblebeemedia-in/?viewAsMember=true"
         ]
     }
     </script>
-
+    <link href="assets/img/favicon.png" rel="icon">
+    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
     <!-- Favicon -->
-    <link rel="icon" href="https://www.bumblebee.com/favicon.ico" type="image/x-icon">
+    <!-- <link rel="icon" href="https://www.bumblebee.com/favicon.ico" type="image/x-icon"> -->
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -217,6 +218,7 @@
               </li>
             </ul>
           </li> -->
+          <li class="dropdown"><a href="projects.html" ><span>Projects</span> </a>
           <li><a href="services.html">Services</a></li>
           <!-- <li><a href="contact.html">Contact</a></li> -->
         </ul>
@@ -224,10 +226,10 @@
       </nav>
 
       <div class="header-social-links">
-        <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <!-- <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a> -->
+        <a href="https://www.facebook.com/people/Bumblebee-Media/61560902312844/" target="_blank" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.instagram.com/bumble_bee_media?igsh=NG9rMHFjaG8wbGpy" target="_blank"  class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.linkedin.com/company/bumblebeemedia-in/?viewAsMember=true" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
 
     </div>
@@ -521,10 +523,10 @@
         <p>© <span>Copyright</span> <strong class="px-1 sitename">Bumble Bee Media</strong> <span>All Rights Reserved</span></p>
       </div>
       <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-twitter-x"></i></a>
-        <a href=""><i class="bi bi-facebook"></i></a>
-        <a href=""><i class="bi bi-instagram"></i></a>
-        <a href=""><i class="bi bi-linkedin"></i></a>
+        <!-- <a href=""><i class="bi bi-twitter-x"></i></a> -->
+        <a href="https://www.facebook.com/people/Bumblebee-Media/61560902312844/" target="_blank"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.instagram.com/bumble_bee_media?igsh=NG9rMHFjaG8wbGpy" target="_blank"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.linkedin.com/company/bumblebeemedia-in/?viewAsMember=true" target="_blank"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
