--- a/plan-details.html
+++ b/plan-details.html
@@ -56,7 +56,7 @@
     "sameAs": [
         "https://www.facebook.com/bumblebee",
         "https://www.twitter.com/bumblebee",
-        "https://www.linkedin.com/company/bumblebee"
+        "ahref="https://www.linkedin.com/company/bumblebeemedia-in/?viewAsMember=true"
     ]
 }
 </script>
@@ -270,6 +270,7 @@
                 </li>
               </ul>
             </li> -->
+            <li class="dropdown"><a href="projects.html" ><span>Projects</span> </a>
             <li><a href="services.html">Services</a></li>
             <!-- <li><a href="contact.html">Contact</a></li> -->
           </ul>
@@ -279,8 +280,8 @@
         <div class="header-social-links">
           <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
           <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-          <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+          <a href="https://www.instagram.com/bumble_bee_media?igsh=NG9rMHFjaG8wbGpy" target="_blank" class="instagram"><i class="bi bi-instagram"></i></a>
+          <a href="https://www.linkedin.com/company/bumblebeemedia-in/?viewAsMember=true" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
         </div>
       </div>
     </header>
@@ -1072,8 +1073,8 @@
         <div class="social-links d-flex justify-content-center">
           <a href=""><i class="bi bi-twitter-x"></i></a>
           <a href=""><i class="bi bi-facebook"></i></a>
-          <a href=""><i class="bi bi-instagram"></i></a>
-          <a href=""><i class="bi bi-linkedin"></i></a>
+          <a href="https://www.instagram.com/bumble_bee_media?igsh=NG9rMHFjaG8wbGpy" target="_blank"><i class="bi bi-instagram"></i></a>
+          <a href="https://www.linkedin.com/company/bumblebeemedia-in/?viewAsMember=true" target="_blank"><i class="bi bi-linkedin"></i></a>
         </div>
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
